<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <LinearLayout
        android:id="@+id/ll_hyzx_zpgl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:clickable="true"
        android:background="@drawable/list_view_item_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_nav_zpgl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/hyzx_item_zpgl"
            android:textColor="#000000"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hyzx_qzgl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:clickable="true"
        android:background="@drawable/list_view_item_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_nav_qzgl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/hyzx_item_qzgl"
            android:textColor="#000000"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hyzx_scgl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:clickable="true"
        android:background="@drawable/list_view_item_bg"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_nav_scgl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/hyzx_item_scgl"
            android:textColor="#000000"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hyzx_ddgl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:clickable="true"
        android:background="@drawable/list_view_item_bg"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_nav_ddgl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/hyzx_item_ddgl"
            android:textColor="#000000"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hyzx_zjgl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:clickable="true"
        android:background="@drawable/list_view_item_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_nav_zjgl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/hyzx_item_zjgl"
            android:textColor="#000000"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hyzx_gggl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:clickable="true"
        android:background="@drawable/list_view_item_bg"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_nav_gggl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/hyzx_item_gggl"
            android:textColor="#000000"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hyzx_xxzx"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:clickable="true"
        android:background="@drawable/list_view_item_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_nav_xxzx"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/hyzx_item_xxzx"
            android:textColor="#000000"
            android:textSize="16dp" />

    </LinearLayout>

</LinearLayout>


